[package]
name = "haxo001"
version = "0.1.0"
authors = ["Javier Cardona <javier.cardona@gmail.com>"]
edition = "2018"

[package.metadata.deb]
assets = [
  ["target/arm-unknown-linux-gnueabihf/release/haxo001", "usr/local/bin/", "755"],
  ["scripts/systemd/create_midi_gadget.sh", "usr/local/bin/", "755"],
  ["notemap.json", "usr/share/haxo/", "644"],
  ["midi/startup/Startup_Haxophone.mid", "usr/share/haxo/", "644"],
]
maintainer-scripts = "debian/"
systemd-units = [
  { unit-name = "haxo", enable = true },
  { unit-name = "blink-zero", enable = true },
]
depends = "libasound2 (>= 1.2.4), libfluidsynth2 (>= 2.1.7)"

[dependencies]
alsa = "0.7.1"
env_logger = "0.9.0"
log = "0.4.14"
midir = "0.9.1"
rand = "0.8.0"
rppal = { version = "0.13.1", features = ["hal"] }
serde_json = "1.0"
schedule_recv = "0.1"
static_assertions = "1.1.0"
structopt = "0.3.22"
time = "0.3.1"

[dev-dependencies]
test-log = "0.2.12"

[build-dependencies]
vergen = { version = "8.2.6", features = ["git", "gitcl"] }

[dependencies.fluidsynth]
git = "https://github.com/scholtzan/rust-fluidsynth"

[features]
default = []
# Enable timing measurements via GPIO (UART_RXD).  Cannot be enabled when serial
# console is used.
instrumentation = []
midi = []
